@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{605, 83}, {909, 1080}}</string>
+	<string>{{624, 73}, {965, 1097}}</string>
 </dict>
 </plist>
